    stops. (Rohith via wheat9)

    HADOOP-11837. AuthenticationFilter should destroy SignerSecretProvider in
    Tomcat deployments. (Bowen Zhang via wheat9)

Release 2.6.5 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12805. Annotate CanUnbuffer with @InterfaceAudience.Public
    (Ted Yu via vinayakumarb)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12773. HBase classes fail to load with client/job classloader
    enabled (sjlee)

    HADOOP-12589. Fix intermittent test failure of TestCopyPreserveFlag
    (iwasakims)

Release 2.6.4 - 2016-02-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11252. RPC client does not time out by default.
    (Wilfred Spiegelenburg and Masatake Iwasaki via aajisaka)

    HADOOP-12107. long running apps may have a huge number of StatisticsData
    instances under FileSystem (Sangjin Lee via Ming Ma)

    HADOOP-12706. TestLocalFsFCStatistics#testStatisticsThreadLocalDataCleanUp
    times out occasionally (Sangjin Lee and Colin Patrick McCabe via jlowe)

    HADOOP-12736. TestTimedOutTestsListener#testThreadDumpAndDeadlocks
    sometimes times out. (Xiao Chen via aajisaka)

    HADOOP-12715. TestValueQueue#testgetAtMostPolicyALL fails intermittently.
    (Xiao Chen via waltersu4549)

Release 2.6.3 - 2015-12-17

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12526. there are duplicate dependency definitions in pom's (sjlee)

    HADOOP-12577. Bumped up commons-collections version to 3.2.2 to address a
    security flaw. (Wei-Chiu Chuang via vinodkv)

Release 2.6.2 - 2015-10-28

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Release 2.6.1 - 2015-09-23

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-7139. Allow appending to existing SequenceFiles
    (kanaka kumar avvaru via vinayakumarb)
